...
            android:layout_marginRight="10sp"
            android:gravity="center"
            android:text="TEMP TEXT"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/newUsernameField"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10sp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/confirmUsernameDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10sp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/light_green"
...
